# beat-detector

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  meson.build  meson_options.txt
cmake/toolchains/: asan.cmake  tsan.cmake
include/: utf8_format.hpp
modules/: audio.blocks.core.ixx  audio.blocks.cppm  audio.blocks.ixx  audio.blocks.spa.ixx  beat.detector.aubio_raii.cppm  beat.detector.aubio_raii.ixx  beat.detector.cppm  beat.detector.impl.cpp  beat.detector.ixx  beat.detector.pw_raii.ixx
modules/audio/blocks/: spa.cppm
modules/beat/detector/: impl.cpp
modules/support/icons/: interface.cppm  pw.cppm
modules/support/u8fmt/: interface.cppm
modules/u8fmt/: interface.cppm
src/: main.cpp
